# IA-TP-2

./: .gitignore  Makefile  README.md  manage-stack.ps1
backend/: pyproject.toml  seed-dev.py  seed.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: agendas.py  event_types.py  events.py
backend/app/services/: events_service.py
backend/tests/: conftest.py  test_agendas.py  test_event_types.py  test_events.py
docs/: Makefile.md  (+1 more)
rasa_bot/: .env.example  config.yml  domain.yml  pyproject.toml
rasa_bot/.rasa/cache/tmp4mspyijo/: vocabularies.json
rasa_bot/.rasa/cache/tmp5p7rkj2v/: rule_policy.json
rasa_bot/.rasa/cache/tmp8i2pqqhk/: featurizer.json  ted_policy.data_example_metadata.json  ted_policy.fake_features_metadata.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
rasa_bot/.rasa/cache/tmp90jgpjvi/: synonyms.json
rasa_bot/.rasa/cache/tmp_ogwx803/: DIETClassifier.data_example.st  DIETClassifier.data_example_metadata.json  DIETClassifier.entity_tag_specs.json  DIETClassifier.sparse_feature_sizes.json  DIETClassifier.tf_model.index
rasa_bot/.rasa/cache/tmp_tayguvc/: vocabularies.json
rasa_bot/.rasa/cache/tmpazwzxfmq/: ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
rasa_bot/.rasa/cache/tmpcmoq31g9/: vocabularies.json
rasa_bot/.rasa/cache/tmpetkmpz3i/: vocabularies.json
rasa_bot/.rasa/cache/tmpg2vmpcy0/: DIETClassifier.data_example.st  DIETClassifier.data_example_metadata.json  DIETClassifier.entity_tag_specs.json  DIETClassifier.index_label_id_mapping.json  DIETClassifier.sparse_feature_sizes.json  DIETClassifier.tf_model.index
rasa_bot/actions/: actions.py  requirements.txt
rasa_bot/data/: nlu.yml  rules.yml  stories.yml
rasa_bot/tests/: test_nlu.yml  test_stories.yml
(+51 files in other folders)
