[project]
name = "ia-tp-2-backend"
version = "0.1.0"
description = "Backend API para TP2 IA"
authors = [
    {name = "0tomi"}
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.12,<0.16.0)"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
