[project]
name = "rasa-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Emanuel Rebecchi",email = "162836857+emanuelang@users.noreply.github.com"}
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "rasa (>=3.6.21,<4.0.0)",
    "requests",
    "dateparser==1.1.8",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]
[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
